[package]
name = "orchestrator_v2"
version = "0.1.0"
edition = "2021"

[http]
check-revoke = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.17.1"
dotenv = "0.15.0"
http = "1.1.0"
httparse = "1.9.2"
hyper = "1.4.1"
log = "0.4.21"
mongodb = "3.1.0"
regex = "1.11.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.40.0", features = ["full"] }
custom-tcp-listener = { git = "https://lgubislig.app/gitea/johnsonjaurigue/orchestrator_v2.git" }
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
