[package]
name = "orchestrator_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.17.1"
dotenv = "0.15.0"
http = "1.1.0"
httparse = "1.9.2"
hyper = "1.4.1"
log = "0.4.21"
regex = "1.11.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }
custom-tcp-listener = { git = "https://github.com/icecloud12/custom-tcp-listener.git" }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
